# nav-competition-icra2022_EBandRL

./: README.md  Singularityfile.def
deepnav/: CMakeLists.txt  package.xml
deepnav/launch/: move_base_eband.launch
deepnav/scripts/: args.py  move_base.py  msgs.py  run.py
deepnav/scripts/elegantrl/: agent.py  demo.py
deepnav/scripts/rl_base/: agent.py  lr_scheduler.py  net.py  replay.py  requirements.txt  run.py  util.py
move_base_ref/: CMakeLists.txt  package.xml
move_base_ref/src/: move_base.cpp
