<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>deepnav</name>
    <version>1.0.0</version>
    <description>
        A 2D deep navigation stack.
    </description>
    <maintainer email="yiyuiii@foxmail.com">Yiyu Chen</maintainer>
    <author>yiyuiii@foxmail.com</author>
    <author>Yiyu Chen</author>
    <license>BSD,LGPL,LGPL (amcl)</license>  

<buildtool_depend>catkin</buildtool_depend> 

<build_depend>roscpp</build_depend> 
<build_depend>rospy</build_depend> 
<build_depend>std_msgs</build_depend> 
<build_depend>message_generation</build_depend> 
<build_export_depend>roscpp</build_export_depend>

<build_export_depend>rospy</build_export_depend> 
<build_export_depend>std_msgs</build_export_depend>

<exec_depend>roscpp</exec_depend> 
<exec_depend>rospy</exec_depend> 
<exec_depend>std_msgs</exec_depend> 
<exec_depend>message_runtime</exec_depend> 

    <export>
    </export>
</package>
